syntax = "proto3";

package service;

import "user_login.proto";
import "user_register.proto";
import "user.proto";

service UserService {
	rpc getUser(UserRequest) returns (UserResponse) {}
}

service AuthService {
	rpc userLogin (UserLoginRequest) returns  (UserLoginResponse) {}
	rpc userRegister (UserRegisterRequest) returns (UserRegisterResponse) {}
}